--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -11,6 +11,7 @@
         "doctrine/orm": "^2.12",
         "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^5.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/dotenv": "*",
